# valorant-labs

./: .gitignore  Cargo.toml  README.md  agent_image_builder.js  api.json  basedata.json  botinfo.js  config.js  config.json  db.js  functions.js  help.js  helper.mjs  index.cjs  index.js  jp.json  json.sqlite  lang.json  main.rs  map.js  methods.js  package-lock.json  package.json  readme.md  riot.txt  server.js  settings.js  shard.js  shard.mjs  slashcommands.json  stats.js  stats2.js  translations.json  usage.js  utils.json  valorantstats.js  vote.js  weapon.js  weapons.js
Website/: .env.pbe  .env.production  .env.staging  .gitignore  README.md  package-lock.json  package.json  vue.config.js
autonews/: autonews-de.txt  autonews-en-gb-status-incidents.txt  autonews-en-us.txt  autonews-en.txt  autonews-jp.txt  autonews-pt-br-status.txt  check-de-status-incidents.js  check-de-status-maintences.js  check-de.js  check-en-gb-status-incidents.js  check-en-gb-status-maintences.js  check-en-gb.js  check-en-us-status-incidents.js  check-en-us-status-maintences.js  check-en-us.js  check-en.js  check-fr-status-incidents.js  check-fr-status-maintences.js  check-fr.js  check-jp-status-incidents.js  check-jp-status-maintences.js  check-jp.js  check-pt-br-status-incidents.js  check-pt-br-status-maintences.js  check-pt-br.js  check.js  redirect.js
commands/: agent.js  agents.js  blacklist.js  botinfo.js  config.json  game.js  help.js  help2.js  help3.js  link.js  map.js  maps.js  mod.rs  patch.js  ranked.js  settings.js  stats.js  status.js  template.js  usage.js  vote.js  weapon.js  (+2 more)
(+111 files in other folders)
