[package]
name = "valorant_labs"
version = "8.0.0"
edition = "2021"

[dependencies]
serenity = {version = "0.12", default-features = true}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.7.1"
log="0.4"
clap={version = "4.4.14", features = ["derive"]}
lazy_static = "1.4"
dotenv = "0.15.0"
env_logger="0.10"
valorant-assets-api="0.1.2"
reqwest="0.11"


[[bin]]
name = "bot"
path = "main.rs"

[package.metadata.scripts]
canary = "cargo run --env=canary"
deploy_canary = "echo Goodbye --env=canary --deploy"